force-app/main/default/objects/Account/fields/Partner_Detail_Video__c.field-meta.xml
<CustomField>
    <fullName>Partner_Detail_Video__c</fullName>
    <description>Store the link of the video of partner detail page</description>
    <label>Partner-Detail-Video</label>
    <type>Url</type>
</CustomField>