force-app/main/default/objects/Account/fields/Partner_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sub_Type__c</fullName>
    <label>Partner Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Managed Services Providers</fullName>
            </value>
            <value>
                <fullName>US Federal Resellers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>