force-app/main/default/objects/Account/fields/Partner_Tier__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier__c</fullName>
    <label>Partner Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Distributor +</fullName>
            </value>
            <value>
                <fullName>erwin Diamond</fullName>
            </value>
            <value>
                <fullName>erwin Korea</fullName>
            </value>
            <value>
                <fullName>Global Partner</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Gold +</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Platinum +</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Silver +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>