force-app/main/default/objects/Account/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Certifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Directory Pro</fullName>
            </value>
            <value>
                <fullName>Active Roles</fullName>
            </value>
            <value>
                <fullName>ActiveRoles Server</fullName>
            </value>
            <value>
                <fullName>Archive Manager</fullName>
            </value>
            <value>
                <fullName>Archive Shuttle Operator Readiness</fullName>
            </value>
            <value>
                <fullName>Asset Manager</fullName>
            </value>
            <value>
                <fullName>ChangeAuditor</fullName>
            </value>
            <value>
                <fullName>ChangeBASE</fullName>
            </value>
            <value>
                <fullName>Cloud Solutions Pro</fullName>
            </value>
            <value>
                <fullName>Coexistence Manager for Notes</fullName>
            </value>
            <value>
                <fullName>Desktop Authority</fullName>
            </value>
            <value>
                <fullName>DR Series Systems</fullName>
            </value>
            <value>
                <fullName>Exchange Pro</fullName>
            </value>
            <value>
                <fullName>Foglight</fullName>
            </value>
            <value>
                <fullName>Foglight for Virtual Enterprise</fullName>
            </value>
            <value>
                <fullName>Foglight for Virtualization</fullName>
            </value>
            <value>
                <fullName>Foglight for Virtualization Enterprise</fullName>
            </value>
            <value>
                <fullName>GroupWise Migrator</fullName>
            </value>
            <value>
                <fullName>Identity Manager</fullName>
            </value>
            <value>
                <fullName>InTrust</fullName>
            </value>
            <value>
                <fullName>KACE Asset Management Implementation for AMA or SMA</fullName>
            </value>
            <value>
                <fullName>KACE SMA Implementation - excludes Service Desk</fullName>
            </value>
            <value>
                <fullName>KACE SMA Service Desk Implementation</fullName>
            </value>
            <value>
                <fullName>KACE Systems Management Appliance (SMA)</fullName>
            </value>
            <value>
                <fullName>Managed Service Partner Specialization</fullName>
            </value>
            <value>
                <fullName>Migration Manager for AD</fullName>
            </value>
            <value>
                <fullName>Migration Manager for Exchange</fullName>
            </value>
            <value>
                <fullName>Migration Manager for Office 365</fullName>
            </value>
            <value>
                <fullName>Migrator for Notes to Exchange</fullName>
            </value>
            <value>
                <fullName>NetVault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>