force-app/main/default/objects/Account/fields/Solutions__c.field-meta.xml
<CustomField>
    <fullName>Solutions__c</fullName>
    <label>Accreditation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Protection</fullName>
            </value>
            <value>
                <fullName>erwin Data Intelligence</fullName>
            </value>
            <value>
                <fullName>erwin Data Modeler</fullName>
            </value>
            <value>
                <fullName>erwin Evolve</fullName>
            </value>
            <value>
                <fullName>Information Management - Database Management</fullName>
            </value>
            <value>
                <fullName>Information Management - Database Replication</fullName>
            </value>
            <value>
                <fullName>Information Management - Performance Monitoring</fullName>
            </value>
            <value>
                <fullName>KACE</fullName>
            </value>
            <value>
                <fullName>Microsoft Platform Management</fullName>
            </value>
            <value>
                <fullName>One Identity - Active Directory Management</fullName>
            </value>
            <value>
                <fullName>One Identity - Identity &amp; Access Management (OneLogin)</fullName>
            </value>
            <value>
                <fullName>One Identity - Identity Governance &amp; Administration</fullName>
            </value>
            <value>
                <fullName>One Identity - Log Management (syslog-ng)</fullName>
            </value>
            <value>
                <fullName>One Identity - Privileged Access Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>