force-app/main/default/objects/Account/fields/Sort_by_Partner_Tier__c.field-meta.xml
<CustomField>
    <fullName>Sort_by_Partner_Tier__c</fullName>
    <formula>CASE(
 Partner_Tier__c, 
 &quot;Platinum +&quot;, 1, 
 &quot;Platinum&quot;, 2,
 &quot;Gold +&quot;, 3,
 &quot;Gold&quot;, 4,
 &quot;Silver +&quot;, 5,
 &quot;Silver&quot;, 6,
 99999)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort by Partner Tier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>